# Sensors_and_Control_Fetch_Robot

./: .gitignore  README.md
archive/: depth.py  moveit.py  obj_cv.py
build-sensor-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  sensor.cbp
build-sensor-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-e56bb179a35c65348483.json  cmakeFiles-v1-0b85aba6a1ae8bb04c36.json  cmakeFiles-v1-fb403885a461329dcea3.json  codemodel-v2-52f12748e3f302a2886e.json  codemodel-v2-672289bb6e769da6b6a4.json  index-2022-03-31T12-23-23-0611.json  index-2022-04-01T12-54-49-0345.json  target-sensor-Debug-233ba11e44f5dcecf525.json  target-sensor-Debug-909942722d58ee69c270.json  target-sensor_autogen-Debug-0acaf9b09b36945cda67.json
build-sensor-Desktop-Debug/sensor_autogen/: moc_predefs.h
fetch_messages/: CMakeLists.txt  package.xml
fetch_messages/msg/: Obj_Detect.msg
fetch_messages/srv/: IkInfo.srv
fetch_robot_sim/: CMakeLists.txt  README.md  package.xml  setup.py
fetch_robot_sim/launch/: fetch.launch  gui.launch  iksolver.launch  obj_detect.launch  sim.launch
fetch_robot_sim/models/cylinder/: cylinder.sdf
fetch_robot_sim/models/large_cube/: large_cube.sdf  model.config
fetch_robot_sim/models/small_cube/: model.config  small_cube.sdf
fetch_robot_sim/models/table/: table.sdf
fetch_robot_sim/msg/: RGB_Image_Info.msg
fetch_robot_sim/scripts/: fetch_gui.py  fetch_sensor.py  gui.py  obj_cv.py  sensor.py
fetch_robot_sim/scripts/gui/: camera_viz.py  cameras.py  fetch.py  gui.py  teleop.py
fetch_robot_sim/scripts/gui/sim/: fetch.py  teleop_twist_keyboard.py
fetch_robot_sim/scripts/gui/ui/: auto.ui  cameras.ui  control.ui  teleop.ui
fetch_robot_sim/scripts/gui_widgets/: camera_viz.py  fetch.py  moveit.py  teleop.py
fetch_robot_sim/scripts/gui_widgets/ui/: cameras.ui  control.ui
fetch_robot_sim/src/gui/: camera_viz.py  fetch.py  teleop.py
fetch_robot_sim/ui/: cameras.ui  control.ui
iksolver/: CMakeLists.txt  oldcode.cpp  package.xml
iksolver/launch/: iksolver_ex.launch  iksolver_node.launch
iksolver/src/: better_main.cpp  main.cpp
iksolver/srv/: calcTraj.srv
sensor/: CMakeLists.txt  Sensor.files  sensor.cpp  sensor.h  sensor_global.h
sensor/src/: main.cpp  sensor.cpp  sensor.h
sensor_python/: CMakeLists.txt  README.md
sensor_python/msg/: Object_Info.msg
sensor_python/scripts/: depth.py  sensor.py
