<?xml version="1.0"?>
<package format="2">
  <name>fetch_messages</name>
  <version>0.9.2</version>
  <description>
    Simulator for fetch robot grasping
  </description>
  <author>George Sheslow</author>
  <maintainer email="gsheslow@yahoo.com.au">George Sheslow</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>topic_tools</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
