<?xml version="1.0"?>
<package format="2">
  <name>fetch_robot_sim</name>
  <version>0.9.2</version>
  <description>
    Simulator for fetch robot grasping
  </description>
  <author>George Sheslow</author>
  <maintainer email="gsheslow@yahoo.com.au">George Sheslow</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>fetch_gazebo</build_depend>
  <build_depend>message_generation</build_depend> 
  <depend>control_toolbox</depend>
  <depend>boost</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_controllers</depend>
  <depend>robot_controllers_interface</depend>
  
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <!-- <depend>trajectory_msgs</depend> -->

  <build_depend>qt5-qmake</build_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>fetch_description</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>


</package>
